package controller;
public class Conecta4 {
    public static void main(String[] args) {
        new Conecta4();
    }

    public void play() {
    	// 
    }
}
