package model;

public class Board {

	public boolean isFull() {
		return false;
	}

	public boolean isValidDropping() {
		// TODO Auto-generated method stub
		return false;
	}

	public void dropping(DiscDrop discDrop) {
		// TODO Auto-generated method stub
		
	}

}
