package model;


public class Turn {

	public Player getPlayer() {
		// TODO Auto-generated method stub
		return null;
	}

}
