package types;

public enum Color {
    RED, YELLOW
}
